<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kandoo!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="calcel">Cancel</string>
    <string name="action_add_task">Add Task</string>
    <string name="action_add_board">Add Board</string>
    <string name="action_edit_boards">Edit Boards</string>
    <string name="action_edit_task">Edit</string>
    <string name="action_delete_task">Delete</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_task_add">Add new task</string>
    <string name="title_activity_task_detail">Task Details</string>
    <string name="title_activity_task_edit">Edit Task</string>
    <string name="board">Board</string>
    <string name="name">Name</string>
    <string name="note">Note</string>
    <string name="create_date">Create date</string>
    <string name="due_date">Due date</string>
    <string name="set_date">Set date</string>
    <string name="set_time">Set time</string>
    <string name="create">Create</string>
    <string name="due">Due</string>
    <string name="create_due_date">Create \u0026 Due date</string>
    <string name="alarm">Alarm</string>
    <string name="time">Time</string>
    <string name="task_title">Title</string>
    <string name="enter_task_note">Notes</string>
    <string name="check_list">Check list</string>
    <string name="new_item">New item</string>
    <string name="title_activity_board_manage">Edit Boards</string>

</resources>